@@ -1623,9 +1623,14 @@ name|SolrQueryRequest
 name|request
 parameter_list|)
 block|{
-name|boolean
-name|reqFieldMatch
+name|QueryScorer
+name|scorer
 init|=
+operator|new
+name|QueryScorer
+argument_list|(
+name|query
+argument_list|,
 name|request
 operator|.
 name|getParams
@@ -1641,10 +1646,16 @@ name|FIELD_MATCH
 argument_list|,
 literal|false
 argument_list|)
+condition|?
+name|fieldName
+else|:
+literal|null
+argument_list|)
 decl_stmt|;
-name|boolean
-name|highlightMultiTerm
-init|=
+name|scorer
+operator|.
+name|setExpandMultiTermQuery
+argument_list|(
 name|request
 operator|.
 name|getParams
@@ -1658,44 +1669,44 @@ name|HIGHLIGHT_MULTI_TERM
 argument_list|,
 literal|true
 argument_list|)
-decl_stmt|;
-name|QueryScorer
-name|scorer
-decl_stmt|;
-if|if
-condition|(
-name|reqFieldMatch
-condition|)
-block|{
-name|scorer
-operator|=
-operator|new
-name|QueryScorer
-argument_list|(
-name|query
-argument_list|,
-name|fieldName
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|scorer
-operator|=
-operator|new
-name|QueryScorer
-argument_list|(
-name|query
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
 name|scorer
 operator|.
-name|setExpandMultiTermQuery
+name|setUsePayloads
 argument_list|(
-name|highlightMultiTerm
+name|request
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getFieldBool
+argument_list|(
+name|fieldName
+argument_list|,
+name|HighlightParams
+operator|.
+name|PAYLOADS
+argument_list|,
+name|request
+operator|.
+name|getSearcher
+argument_list|()
+operator|.
+name|getLeafReader
+argument_list|()
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+name|fieldName
+argument_list|)
+operator|.
+name|hasPayloads
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
@@ -3582,7 +3593,7 @@ name|summaries
 argument_list|)
 expr_stmt|;
 block|}
-comment|// no summeries made, copy text from alternate field
+comment|// no summaries made, copy text from alternate field
 if|if
 condition|(
 name|summaries
