@@ -20,9 +20,29 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
 import|;
 end_import
 
@@ -96,6 +116,66 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|Term
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanPayloadCheckQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTermQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -142,9 +222,69 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|handler
+operator|.
+name|component
+operator|.
+name|ResponseBuilder
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|component
+operator|.
+name|SearchComponent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|response
+operator|.
+name|SolrQueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|DocSet
 import|;
 end_import
 
@@ -5193,6 +5333,238 @@ argument_list|,
 literal|"//lst[@name='highlighting']/lst[@name='1000']/arr[@name='lower' and count(*)=2]"
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|payloadFilteringSpanQuery
+specifier|public
+name|void
+name|payloadFilteringSpanQuery
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|String
+name|FIELD_NAME
+init|=
+literal|"payloadDelimited"
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"0"
+argument_list|,
+name|FIELD_NAME
+argument_list|,
+literal|"word|7 word|2"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//We search at a lower level than typical Solr tests because there's no QParser for payloads
+comment|//Create query matching this payload
+name|Query
+name|query
+init|=
+operator|new
+name|SpanPayloadCheckQuery
+argument_list|(
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|FIELD_NAME
+argument_list|,
+literal|"word"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+literal|0
+block|,
+literal|0
+block|,
+literal|0
+block|,
+literal|7
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|//bytes for integer 7
+comment|//invoke highlight component... the hard way
+specifier|final
+name|SearchComponent
+name|hlComp
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getSearchComponent
+argument_list|(
+literal|"highlight"
+argument_list|)
+decl_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"hl"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"hl.fl"
+argument_list|,
+name|FIELD_NAME
+argument_list|,
+name|HighlightParams
+operator|.
+name|USE_PHRASE_HIGHLIGHTER
+argument_list|,
+literal|"true"
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|SolrQueryResponse
+name|resp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|ResponseBuilder
+name|rb
+init|=
+operator|new
+name|ResponseBuilder
+argument_list|(
+name|req
+argument_list|,
+name|resp
+argument_list|,
+name|Collections
+operator|.
+name|singletonList
+argument_list|(
+name|hlComp
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|rb
+operator|.
+name|setHighlightQuery
+argument_list|(
+name|query
+argument_list|)
+expr_stmt|;
+name|rb
+operator|.
+name|setResults
+argument_list|(
+name|req
+operator|.
+name|getSearcher
+argument_list|()
+operator|.
+name|getDocListAndSet
+argument_list|(
+name|query
+argument_list|,
+operator|(
+name|DocSet
+operator|)
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//highlight:
+name|hlComp
+operator|.
+name|prepare
+argument_list|(
+name|rb
+argument_list|)
+expr_stmt|;
+name|hlComp
+operator|.
+name|process
+argument_list|(
+name|rb
+argument_list|)
+expr_stmt|;
+comment|//inspect response
+specifier|final
+name|String
+index|[]
+name|snippets
+init|=
+operator|(
+name|String
+index|[]
+operator|)
+name|resp
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|findRecursive
+argument_list|(
+literal|"highlighting"
+argument_list|,
+literal|"0"
+argument_list|,
+name|FIELD_NAME
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"<em>word|7</em> word|2"
+argument_list|,
+name|snippets
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|req
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
